--- a/style.scss
+++ b/style.scss
@@ -46,6 +46,7 @@ body {
 button {
     font-family: Ubuntu;
 }
+/* start hero */
 .hero {
     background-image: linear-gradient(135deg, $gradient-very-light-red 5%, $gradient-light-red 100%);
     width: 100%;
@@ -126,10 +127,9 @@ button {
         color: white;
     }
 }
-
 /* end hero */
 
-/* start menu container */
+/* start mobile-menu */
 .mobile-menu {
     position: absolute;
     top: 7.75rem;
@@ -219,13 +219,12 @@ button {
         margin: 1.375rem auto;
     }
 }
-/* end menu container */
+/* end mobile-menu */
 
 /* start main (Designed for...) */
 main {
     margin-top: 6rem;
     text-align: center;
-
     /* "Designed for..." */
     .white-bkg1-title {
         font-size: 2rem;
@@ -282,10 +281,13 @@ main {
         }
     }
 
-    .laptop {
-        width: 100%;
-        transform: scale(1.35);
-        margin-bottom: 5rem;
+    .white-bkg2 {
+        padding-top: 4rem;
+        .laptop {
+            width: 100%;
+            transform: scale(1.35);
+            margin-bottom: 5rem;
+        }
     }
 }
 /* end main */
@@ -350,6 +352,7 @@ footer {
             .mobile-menu {
                 position: relative;
                 top: unset;
+                
             }
             .logo {
                 left: 0;
