arrows done, fix first svg

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
+html {
+  overflow-x: hidden;
+}
+
 *,
 *::before,
 *::after {
@@ -8,18 +12,17 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 body {
   font-family: Overpass, sans-serif;
-  overflow-x: hidden;
 }
 
 button {
   font-family: Ubuntu;
 }
 
+/* start hero */
 .hero {
   background-image: linear-gradient(135deg, #ff8f70 5%, #ff3d54 100%);
   width: 100%;
@@ -27,13 +30,14 @@ button {
   padding: 13rem 2.6rem 10.5rem;
   border-radius: 0 0 0 100px;
   position: relative;
-  overflow: hidden;
   text-align: center;
+  height: auto;
+  z-index: 2;
+  overflow: hidden;
 }
 
 .hero .bg-svg {
   position: absolute;
-  z-index: 2;
   bottom: -33rem;
   right: -42rem;
   width: 380%;
@@ -109,9 +113,9 @@ button {
 }
 
 /* end hero */
-/* start menu container */
+/* start mobile-menu */
 .mobile-menu {
-  position: absolute;
+  position: fixed;
   top: 7.75rem;
   left: 50%;
   -webkit-transform: translateX(-163%);
@@ -120,7 +124,7 @@ button {
   transition: -webkit-transform .001s ease-in;
   transition: transform .001s ease-in;
   transition: transform .001s ease-in, -webkit-transform .001s ease-in;
-  z-index: 4;
+  z-index: 10;
   background: white;
   width: 87%;
   list-style-type: none;
@@ -181,6 +185,11 @@ button {
   margin-bottom: .375rem;
 }
 
+.mobile-menu .arrow {
+  -webkit-transform-origin: 75% 50%;
+          transform-origin: 75% 50%;
+}
+
 .mobile-menu .arrow-dark {
   padding-left: .4rem;
   -webkit-transition: all 0.2s ease-in-out;
@@ -223,7 +232,7 @@ button {
   margin: 1.375rem auto;
 }
 
-/* end menu container */
+/* end mobile-menu */
 /* start main (Designed for...) */
 main {
   margin-top: 6rem;
@@ -295,7 +304,11 @@ main .dark-blue-bkg p {
   color: white;
 }
 
-main .laptop {
+main .white-bkg2 {
+  padding-top: 4rem;
+}
+
+main .white-bkg2 .laptop {
   width: 100%;
   -webkit-transform: scale(1.35);
           transform: scale(1.35);
@@ -353,6 +366,9 @@ footer .footer-items:last-child {
   *::after {
     overflow-x: unset;
   }
+  .hero {
+    overflow: hidden;
+  }
   .hero .bg-svg {
     position: absolute;
     z-index: 2;
@@ -387,8 +403,8 @@ footer .footer-items:last-child {
     display: none;
   }
   .hero .mobile-menu {
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+    -webkit-transform: translateX(-50%) !important;
+            transform: translateX(-50%) !important;
     background: transparent;
     -webkit-box-shadow: none;
             box-shadow: none;
