--- a/style.scss
+++ b/style.scss
@@ -29,18 +29,19 @@ $very-dark-desaturated-blue: hsl(237, 23%, 32%);
 
 
 
-
+html {
+    overflow-x: hidden;
+}
 *,
 *::before,
 *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 body {
     font-family: Overpass, sans-serif;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 button {
@@ -54,11 +55,12 @@ button {
     padding: 13rem 2.6rem 10.5rem;
     border-radius: 0 0 0 100px;
     position: relative;
-    overflow: hidden;
     text-align: center;
+    height: auto;
+    z-index: 2;
+    overflow: hidden;
     .bg-svg {
         position: absolute;
-        z-index: 2;
         bottom: -33rem;
         right: -42rem;
         width: 380%;
@@ -97,13 +99,13 @@ button {
         padding-bottom: 2.5rem;
         z-index: 5;
     }
-
+    
     .hero-btns {
         display: flex;
         justify-content: center;
         gap: 1rem;
     }
-
+    
     // "start for free" & "learn more"
     .hero-btn {
         padding: .75rem 1.25rem;
@@ -114,12 +116,12 @@ button {
         font-weight: 600;
         cursor: pointer;
     }
-
+    
     // start for free
     .hero-btn:first-child {
         color: $light-red;
     }
-
+    
     // learn more
     .hero-btn:last-child {
         background-color: transparent;
@@ -131,12 +133,12 @@ button {
 
 /* start mobile-menu */
 .mobile-menu {
-    position: absolute;
+    position: fixed;
     top: 7.75rem;
     left: 50%;
     transform: translateX(-163%);
     transition: transform .001s ease-in;
-    z-index: 4;
+    z-index: 10;
     background: white;
     width: 87%;
     list-style-type: none;
@@ -185,6 +187,9 @@ button {
         font-size: 1rem;
         font-weight: bold;
         margin-bottom: .375rem;
+    }
+    .arrow {
+        transform-origin: 75% 50%;
     }
     .arrow-dark {
         padding-left: .4rem;
@@ -334,6 +339,7 @@ footer {
         overflow-x: unset;
     }
     .hero {
+        overflow: hidden;
         .bg-svg {
             position: absolute;
             z-index: 2;
@@ -363,7 +369,8 @@ footer {
             }
         }
         .mobile-menu {
-            transform: translateX(-50%);
+            // !important to overwrite inline transform from js
+            transform: translateX(-50%) !important;
             background: transparent;
             box-shadow: none;
             display: flex;
