--- a/style.scss
+++ b/style.scss
@@ -49,7 +49,7 @@ button {
 }
 /* start hero */
 .hero {
-    background-image: linear-gradient(135deg, $gradient-very-light-red 5%, $gradient-light-red 100%);
+    background-image: linear-gradient(135deg, $gradient-very-light-red 0%, $gradient-light-red 100%);
     width: 100%;
     color: white;
     padding: 13rem 2.6rem 10.5rem;
@@ -120,6 +120,10 @@ button {
     // start for free
     .hero-btn:first-child {
         color: $light-red;
+        &:hover {
+            background-color: $very-light-red;
+            color: white;
+        }
     }
     
     // learn more
@@ -127,6 +131,10 @@ button {
         background-color: transparent;
         border: 1px solid white;
         color: white;
+        &:hover {
+            background-color: white;
+            color:  $very-light-red;
+        }
     }
 }
 /* end hero */
@@ -154,12 +162,14 @@ button {
     }
     .menu-category {
         font-size: 1.15rem;
-        font-weight: bold;
         color: $very-dark-blue;
         padding: .875rem;
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+    .menu-category:hover {
+        font-weight: bold;
     }
     button {
         cursor: pointer;
@@ -175,6 +185,9 @@ button {
         font-size: 1.15rem;
         font-weight: 600;
         padding: .9rem 2.75rem;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
     // Mobile styling. (See media query below for desktop.)
@@ -187,6 +200,11 @@ button {
         font-size: 1rem;
         font-weight: bold;
         margin-bottom: .375rem;
+    }
+    .sign-up:hover {
+        background-image: none;
+        background-color: white;
+        color: $light-red;
     }
     .arrow {
         transform-origin: 75% 50%;
@@ -210,11 +228,13 @@ button {
         background: $grayish-blue;
         padding: 1rem;
         color: $very-dark-blue;
-        font-weight: bold;
         opacity: .7;
         border-radius: 5px;
         li {
             padding: .6rem;
+        }
+        li:hover {
+            text-shadow: 1px 0px 0px $very-dark-blue;
         }
     }
     hr {
@@ -310,6 +330,7 @@ footer {
     border-radius: 0 100px 0 0;
     .footer-logo {
         padding: 5rem 0;
+        cursor: pointer;
     }
     .footer-title {
         font-weight: initial;
@@ -322,12 +343,28 @@ footer {
             padding-bottom: 0.8rem;
             color: $grayish-blue;
             opacity: .67;
+            cursor: pointer;
+            &:hover {
+                text-decoration: underline;
+            }
         }
         &:last-child {
             padding-bottom: 4.25rem;
         }
     }
 }
+///////////////////////
+// DESKTOP ////////////
+///////////////////////
+///////////////////////
+// DESKTOP ////////////
+///////////////////////
+///////////////////////
+// DESKTOP ////////////
+///////////////////////
+///////////////////////
+// DESKTOP ////////////
+///////////////////////
 ///////////////////////
 // DESKTOP ////////////
 ///////////////////////
@@ -369,7 +406,7 @@ footer {
             }
         }
         .mobile-menu {
-            // !important to overwrite inline transform from js
+            // !important below  is to overwrite inline transform from js
             transform: translateX(-50%) !important;
             background: transparent;
             box-shadow: none;
@@ -377,12 +414,24 @@ footer {
             position: relative;
             width: 100%;
             .menu-category {
-                color: white;
+                color: rgba(255, 255, 255, 0.686);
+                font-weight: bold;
+                font-family: Ubuntu;
+
             }
             .arrow-light {
                 display: inline;
                 padding-left: .4rem;
-                transition: all 0.2s ease-in-out;
+                transition: transform 0.2s ease-in-out;
+                opacity: .6;
+            }
+            .menu-category:hover {
+                color: white;
+                text-decoration: underline;
+            }
+            .menu-category:hover 
+            .arrow-light {
+                opacity: 1;
             }
             .arrow-dark {
                 display: none;
@@ -401,6 +450,7 @@ footer {
                 background: transparent;
                 color: white;
                 font-size: 1.2rem;
+                font-family: Ubuntu;
                 opacity: .9;
             }
             .sign-up {
@@ -410,6 +460,10 @@ footer {
                 white-space: nowrap;
                 overflow: hidden;
             }
+            .sign-up:hover {
+                color: white;
+                background-color: $very-light-red;
+            }
             .items {
                 background: white;
                 opacity: 1;
@@ -417,6 +471,9 @@ footer {
                 top: 4.5rem;
                 text-align: left;
                 padding-right: auto;
+                & > li:hover {
+                    text-shadow: 1px 0px 0px $very-dark-blue;
+                }
             }
             .items:nth-of-type(1) {
                 left: 1rem;
@@ -438,6 +495,14 @@ footer {
             gap: 2rem;
             .hero-btn {
                 transform: scale(1.1);
+            }
+            .start-for-free:hover {
+                color: white;
+                background-color: $very-light-red;
+            }
+            .learn-more:hover{
+                color: $light-red;
+                background-color: white;
             }
         }
     }
@@ -561,11 +626,6 @@ footer {
         .footer-items {
             list-style-type: none;
             padding-bottom: 2.5rem;
-            li {
-                padding-bottom: 0.8rem;
-                color: $grayish-blue;
-                opacity: .67;
-            }
             &:last-child {
                 padding-bottom: 4.25rem;
             }
