--- a/style.scss
+++ b/style.scss
@@ -64,6 +64,7 @@ button {
         bottom: -33rem;
         right: -42rem;
         width: 380%;
+        overflow-x: hidden;
     }
     .logo {
         width: 5rem;
