--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
+/* colors */
+/* Mobile first */
 html {
   overflow-x: hidden;
 }
@@ -23,7 +25,6 @@ button {
   font-family: Ubuntu;
 }
 
-/* start hero */
 .hero {
   background-image: linear-gradient(135deg, #ff8f70 0%, #ff3d54 100%);
   width: 100%;
@@ -37,7 +38,7 @@ button {
   overflow: hidden;
 }
 
-.hero .bg-svg {
+.hero .hero-svg {
   position: absolute;
   bottom: -33rem;
   right: -42rem;
@@ -70,21 +71,21 @@ button {
 .hero h1 {
   font-size: 2.2rem;
   font-weight: 600;
-  letter-spacing: -.04em;
+  letter-spacing: -0.04em;
   line-height: 1.3;
-  padding-bottom: .9rem;
+  padding-bottom: 0.9rem;
   z-index: 10;
 }
 
 .hero .heading-caption {
   color: white;
-  opacity: .7;
+  opacity: 0.7;
   font-size: 1.1rem;
   padding-bottom: 2.5rem;
   z-index: 5;
 }
 
-.hero .hero-btns {
+.hero .cta-btns {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -94,8 +95,8 @@ button {
   gap: 1rem;
 }
 
-.hero .hero-btn {
-  padding: .75rem 1.25rem;
+.hero .cta-btns .cta-btn {
+  padding: 0.75rem 1.25rem;
   background: white;
   border: none;
   border-radius: 30px;
@@ -104,38 +105,36 @@ button {
   cursor: pointer;
 }
 
-.hero .hero-btn:first-child {
+.hero .cta-btns .start-for-free {
   color: #ff525d;
 }
 
-.hero .hero-btn:first-child:hover {
+.hero .cta-btns .start-for-free:hover {
   background-color: #ff7a85;
   color: white;
 }
 
-.hero .hero-btn:last-child {
+.hero .cta-btns .learn-more {
   background-color: transparent;
   border: 1px solid white;
   color: white;
 }
 
-.hero .hero-btn:last-child:hover {
+.hero .cta-btns .learn-more:hover {
   background-color: white;
   color: #ff7a85;
 }
 
-/* end hero */
-/* start mobile-menu */
-.mobile-menu {
+.nav-items {
   position: fixed;
   top: 7.75rem;
   left: 50%;
   -webkit-transform: translateX(-163%);
           transform: translateX(-163%);
-  -webkit-transition: -webkit-transform .001s ease-in;
-  transition: -webkit-transform .001s ease-in;
-  transition: transform .001s ease-in;
-  transition: transform .001s ease-in, -webkit-transform .001s ease-in;
+  -webkit-transition: -webkit-transform 0.001s ease-in;
+  transition: -webkit-transform 0.001s ease-in;
+  transition: transform 0.001s ease-in;
+  transition: transform 0.001s ease-in, -webkit-transform 0.001s ease-in;
   z-index: 10;
   background: white;
   width: 87%;
@@ -146,19 +145,19 @@ button {
           box-shadow: 0px 30px 30px -30px #4b5862;
 }
 
-.mobile-menu ul {
+.nav-items ul {
   list-style-type: none;
 }
 
-.mobile-menu li {
+.nav-items li {
   font-size: 1rem;
   cursor: pointer;
 }
 
-.mobile-menu .menu-category {
+.nav-items .menu-category {
   font-size: 1.15rem;
   color: #1f3f5b;
-  padding: .875rem;
+  padding: 0.875rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -170,15 +169,15 @@ button {
           justify-content: center;
 }
 
-.mobile-menu .menu-category:hover {
+.nav-items .menu-category:hover {
   font-weight: bold;
 }
 
-.mobile-menu button {
+.nav-items button {
   cursor: pointer;
 }
 
-.mobile-menu .login {
+.nav-items .login {
   color: #1f3f5b;
   padding-bottom: 1rem;
   background: white;
@@ -186,82 +185,80 @@ button {
   font-family: Overpass;
   font-size: 1.15rem;
   font-weight: 600;
-  padding: .9rem 2.75rem;
+  padding: 0.9rem 2.75rem;
 }
 
-.mobile-menu .login:hover {
+.nav-items .login:hover {
   text-decoration: underline;
 }
 
-.mobile-menu .sign-up {
+.nav-items .sign-up {
   background-image: linear-gradient(135deg, #ff8f70 5%, #ff3d54 100%);
   border-radius: 30px;
   border: 0;
-  padding: .9rem 2.75rem;
+  padding: 0.9rem 2.75rem;
   color: white;
   font-size: 1rem;
   font-weight: bold;
-  margin-bottom: .375rem;
+  margin-bottom: 0.375rem;
 }
 
-.mobile-menu .sign-up:hover {
+.nav-items .sign-up:hover {
   background-image: none;
   background-color: white;
   color: #ff525d;
 }
 
-.mobile-menu .arrow {
+.nav-items .arrow {
   -webkit-transform-origin: 75% 50%;
           transform-origin: 75% 50%;
 }
 
-.mobile-menu .arrow-dark {
-  padding-left: .4rem;
+.nav-items .arrow-dark {
+  padding-left: 0.4rem;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
-.mobile-menu .arrow-light {
+.nav-items .arrow-light {
   display: none;
 }
 
-.mobile-menu .toggle-block {
+.nav-items .toggle-block {
   display: block !important;
 }
 
-.mobile-menu .toggle-rotate {
+.nav-items .toggle-rotate {
   -webkit-transform-origin: 75% 50%;
           transform-origin: 75% 50%;
   -webkit-transform: rotateZ(180deg);
           transform: rotateZ(180deg);
 }
 
-.mobile-menu .items {
+.nav-items .items {
   display: none;
   background: #e9e9ec;
   padding: 1rem;
   color: #1f3f5b;
-  opacity: .7;
+  opacity: 0.7;
   border-radius: 5px;
 }
 
-.mobile-menu .items li {
-  padding: .6rem;
+.nav-items .items li {
+  padding: 0.6rem;
 }
 
-.mobile-menu .items li:hover {
+.nav-items .items li:hover {
   text-shadow: 1px 0px 0px #1f3f5b;
 }
 
-.mobile-menu hr {
+.nav-items hr {
   width: 100%;
   color: #e9e9ec;
-  opacity: .4;
+  opacity: 0.4;
   margin: 1.375rem auto;
 }
 
-/* end mobile-menu */
-/* start main (Designed for...) */
 main {
   margin-top: 6rem;
   text-align: center;
@@ -271,7 +268,7 @@ main {
 main .white-bkg1-title {
   font-size: 2rem;
   font-weight: 600;
-  letter-spacing: -.02em;
+  letter-spacing: -0.02em;
   color: #1f3f5b;
   text-align: center;
 }
@@ -294,7 +291,7 @@ main p {
   font-size: 1.05rem;
   line-height: 1.7;
   color: #4b5862;
-  opacity: .8;
+  opacity: 0.8;
 }
 
 main p:nth-of-type(1) {
@@ -343,7 +340,6 @@ main .white-bkg2 .laptop {
   margin-bottom: 5rem;
 }
 
-/* end main */
 footer {
   font-family: Ubuntu;
   font-size: 1.125rem;
@@ -382,7 +378,7 @@ footer .footer-items {
 footer .footer-items li {
   padding-bottom: 0.8rem;
   color: #e9e9ec;
-  opacity: .67;
+  opacity: 0.67;
   cursor: pointer;
 }
 
@@ -394,6 +390,7 @@ footer .footer-items:last-child {
   padding-bottom: 4.25rem;
 }
 
+/* Desktop */
 @media only screen and (min-width: 950px) {
   *,
   *::before,
@@ -403,7 +400,7 @@ footer .footer-items:last-child {
   .hero {
     overflow: hidden;
   }
-  .hero .bg-svg {
+  .hero .hero-svg {
     position: absolute;
     z-index: 2;
     bottom: -65%;
@@ -412,7 +409,7 @@ footer .footer-items:last-child {
     -webkit-transform: scale(2);
             transform: scale(2);
   }
-  .hero .header-flex {
+  .hero .nav-flex {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -423,20 +420,20 @@ footer .footer-items:last-child {
     top: -10rem;
     padding: 0 6rem;
   }
-  .hero .header-flex .logo,
-  .hero .header-flex .mobile-menu {
+  .hero .nav-flex .logo,
+  .hero .nav-flex .nav-items {
     position: relative;
     top: unset;
   }
-  .hero .header-flex .logo {
+  .hero .nav-flex .logo {
     left: 0;
     -webkit-transform: scale(1.5);
             transform: scale(1.5);
   }
-  .hero .header-flex .hamburger-menu {
+  .hero .nav-flex .hamburger-menu {
     display: none;
   }
-  .hero .mobile-menu {
+  .hero .nav-items {
     -webkit-transform: translateX(-50%) !important;
             transform: translateX(-50%) !important;
     background: transparent;
@@ -448,35 +445,34 @@ footer .footer-items:last-child {
     position: relative;
     width: 100%;
   }
-  .hero .mobile-menu .menu-category {
+  .hero .nav-items .menu-category {
     color: rgba(255, 255, 255, 0.686);
     font-weight: bold;
     font-family: Ubuntu;
   }
-  .hero .mobile-menu .arrow-light {
+  .hero .nav-items .arrow-light {
     display: inline;
-    padding-left: .4rem;
+    padding-left: 0.4rem;
     -webkit-transition: -webkit-transform 0.2s ease-in-out;
     transition: -webkit-transform 0.2s ease-in-out;
     transition: transform 0.2s ease-in-out;
     transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
-    opacity: .6;
+    opacity: 0.6;
   }
-  .hero .mobile-menu .menu-category:hover {
+  .hero .nav-items .menu-category:hover {
     color: white;
     text-decoration: underline;
   }
-  .hero .mobile-menu .menu-category:hover
-.arrow-light {
+  .hero .nav-items .menu-category:hover .arrow-light {
     opacity: 1;
   }
-  .hero .mobile-menu .arrow-dark {
+  .hero .nav-items .arrow-dark {
     display: none;
   }
-  .hero .mobile-menu hr {
+  .hero .nav-items hr {
     display: none;
   }
-  .hero .mobile-menu .desktop-menu-btns {
+  .hero .nav-items .nav-btns {
     margin-left: auto;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -485,28 +481,28 @@ footer .footer-items:last-child {
     right: 0;
     font-size: 3rem;
   }
-  .hero .mobile-menu .login {
+  .hero .nav-items .nav-btns .login {
     background: transparent;
     color: white;
     font-size: 1.2rem;
     font-family: Ubuntu;
-    opacity: .9;
+    opacity: 0.9;
   }
-  .hero .mobile-menu .login:hover {
+  .hero .nav-items .nav-btns .login:hover {
     opacity: 1;
   }
-  .hero .mobile-menu .sign-up {
+  .hero .nav-items .nav-btns .sign-up {
     font-size: 1.15rem;
     background: white;
     color: #ff525d;
     white-space: nowrap;
     overflow: hidden;
   }
-  .hero .mobile-menu .sign-up:hover {
+  .hero .nav-items .nav-btns .sign-up:hover {
     color: white;
     background-color: #ff7a85;
   }
-  .hero .mobile-menu .items {
+  .hero .nav-items .items {
     background: white;
     opacity: 1;
     position: absolute;
@@ -514,16 +510,16 @@ footer .footer-items:last-child {
     text-align: left;
     padding-right: auto;
   }
-  .hero .mobile-menu .items > li:hover {
+  .hero .nav-items .items > li:hover {
     text-shadow: 1px 0px 0px #1f3f5b;
   }
-  .hero .mobile-menu .items:nth-of-type(1) {
+  .hero .nav-items .items:nth-of-type(1) {
     left: 1rem;
   }
-  .hero .mobile-menu .items:nth-of-type(2) {
+  .hero .nav-items .items:nth-of-type(2) {
     left: 9rem;
   }
-  .hero .mobile-menu .items:nth-of-type(3) {
+  .hero .nav-items .items:nth-of-type(3) {
     left: 16rem;
   }
   .hero h1 {
@@ -532,28 +528,20 @@ footer .footer-items:last-child {
   .hero .heading-caption {
     font-size: 1.375rem;
   }
-  .hero .hero-btns {
+  .hero .cta-btns {
     gap: 2rem;
   }
-  .hero .hero-btns .hero-btn {
+  .hero .cta-btns .cta-btn {
     -webkit-transform: scale(1.1);
             transform: scale(1.1);
   }
-  .hero .hero-btns .start-for-free:hover {
+  .hero .cta-btns .start-for-free:hover {
     color: white;
     background-color: #ff7a85;
   }
-  .hero .hero-btns .learn-more:hover {
+  .hero .cta-btns .learn-more:hover {
     color: #ff525d;
     background-color: white;
-  }
-  main {
-    /* start white-bkg1 */
-    /* end white-bkg1 */
-    /* start dark-blue-bkg */
-    /* end dark-blue-bg */
-    /* start white-bkg2 */
-    /* end white-bkg2 */
   }
   main .white-bkg1-title {
     font-size: 3rem;
@@ -578,8 +566,8 @@ footer .footer-items:last-child {
   }
   main .white-bkg1-flex p {
     padding: 0;
-    letter-spacing: .03em;
-    font-size: .95rem;
+    letter-spacing: 0.03em;
+    font-size: 0.95rem;
   }
   main .white-bkg1-flex p:nth-of-type(1) {
     padding-bottom: 3rem;
@@ -668,7 +656,6 @@ footer .footer-items:last-child {
   main .white-bkg2 .white-bkg2-right {
     margin-right: 7vw;
   }
-  /* end main */
   footer {
     margin: 5rem 0 0;
     padding: 6rem 10rem 0 0;
