--- a/style.scss
+++ b/style.scss
@@ -437,38 +437,37 @@ footer {
 					text-shadow: 1px 0px 0px $very-dark-blue;
 				}
 			}
-			.items:nth-of-type(1) {
-				left: 1rem;
-			}
-			.items:nth-of-type(2) {
-				left: 9rem;
-			}
-			.items:nth-of-type(3) {
-				left: 16rem;
-			}
 		}
 		h1 {
-			font-size: 4rem;
+            font-size: 4rem;
 		}
 		.heading-caption {
-			font-size: 1.375rem;
+            font-size: 1.375rem;
 		}
 		.cta-btns {
-			gap: 2rem;
+            gap: 2rem;
 			.cta-btn {
-				transform: scale(1.1);
+                transform: scale(1.1);
 			}
 			.start-for-free:hover {
-				color: white;
+                color: white;
 				background-color: $very-light-red;
 			}
 			.learn-more:hover {
-				color: $light-red;
+                color: $light-red;
 				background-color: white;
 			}
 		}
 	}
-
+    .product-items {
+        left: 1rem;
+    }
+    .company-items {
+        left: 9rem;
+    }
+    .connect-items {
+        left: 16rem;
+    }
 	main {
 		.white-bkg1-title {
 			font-size: 3rem;
